Bug 455371 - CD Reports 0 Tracks in Amarok
Summary: CD Reports 0 Tracks in Amarok
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/CD (other bugs)
Version First Reported In: 2.9.71
Platform: Other Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-15 23:34 UTC by Russell
Modified: 2024-03-28 09:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Run log of Amarok not detecting CD tracks (108.33 KB, text/plain)
2022-06-15 23:34 UTC, Russell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Russell 2022-06-15 23:34:21 UTC
Created attachment 149769 [details]
Run log of Amarok not detecting CD tracks

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
I've bought some CDs, and I was trying to put them on my MP3 player. However, Amarok, while it detects the presence of a CD, can't seem to actually find the tracks. Other ripping tools will display the presence of tracks, although of those, at this point, only SoundJuicer appears able to get metadata. I've also tried several CDs by different artists, etc.

STEPS TO REPRODUCE
1.  Insert a CD with Amarok open
2. Look at the media entry for the CD
3. It says there are 0 tracks on the CD, and it can't be played or ripped.

OBSERVED RESULT
0 tracks are listed for the CD.

EXPECTED RESULT
I was expecting the appropriate number of tracks.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Ubuntu 20.04 LTS 64-bit, gnome 3.36
KDE Plasma Version: N/A?
Qt: 5.12.8
KDE Frameworks: 5.68.0
kf5-config: 1.0


ADDITIONAL INFORMATION
I am using the PGomes PPA for my Amarok build, but this bug was also present with the official package in Ubuntu 18.04 as well.
Comment 1 Heiko Becker 2022-06-16 07:30:52 UTC
Do you have audiocd-kio installed? It's the component that allows Amarok to play CDs.

(Your distro should probably list as some kind of optional runtime dependency)
Comment 2 Russell 2022-06-17 11:42:21 UTC
(In reply to Heiko Becker from comment #1)
> Do you have audiocd-kio installed? It's the component that allows Amarok to
> play CDs.
> 
> (Your distro should probably list as some kind of optional runtime
> dependency)

I don't seem to have it by that exact name, but it appears to be present?

$dpkg -l | grep audiocd
ii  kio-audiocd                                   4:19.12.3-0ubuntu1                                               amd64        transparent audio CD access for applications using the KDE Platform

I can't find it by the original name, is this the right one?
Comment 3 Heiko Becker 2022-06-17 12:07:36 UTC
> $dpkg -l | grep audiocd
> ii  kio-audiocd                                   4:19.12.3-0ubuntu1        
> amd64        transparent audio CD access for applications using the KDE
> Platform
> 
> I can't find it by the original name, is this the right one?

That seems to be the right one, audiocd-kio is the upstream name. I currently don't have a CD or a drive with me, but can you try navigating to audiocd:/ in dolphin or konqueror? If the tracks show up there, it's likely Amarok's fault, if not, the bug is probably in audiocd-kio.
Comment 4 Russell 2022-06-18 05:03:58 UTC
(In reply to Heiko Becker from comment #3)
> > $dpkg -l | grep audiocd
> > ii  kio-audiocd                                   4:19.12.3-0ubuntu1        
> > amd64        transparent audio CD access for applications using the KDE
> > Platform
> > 
> > I can't find it by the original name, is this the right one?
> 
> That seems to be the right one, audiocd-kio is the upstream name. I
> currently don't have a CD or a drive with me, but can you try navigating to
> audiocd:/ in dolphin or konqueror? If the tracks show up there, it's likely
> Amarok's fault, if not, the bug is probably in audiocd-kio.

I can confirm that the tracks appear in Dolphin in the audiocd:/ path (although it's adding a ?device=/dev/sr0 too). I also went back to Amarok after they loaded, and nope, they're still not showing up there.
Comment 5 Bug Janitor Service 2024-03-28 08:49:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/amarok/-/merge_requests/72
Comment 6 Tuomas Nurmi 2024-03-28 09:21:22 UTC
Git commit a30f5c9553e1e59e66196df5a1b96d3d84bd3d27 by Tuomas Nurmi.
Committed on 28/03/2024 at 08:47.
Pushed by nurmi into branch 'master'.

Fix audio cd collection.

Seems to have been broken in KF5 port. QUrl readily ignores urls that don't
look good, so build it little bit more directly.

M  +2    -1    ChangeLog
M  +1    -3    src/core-impl/collections/audiocd/AudioCdCollection.cpp

https://invent.kde.org/multimedia/amarok/-/commit/a30f5c9553e1e59e66196df5a1b96d3d84bd3d27