Fix audio cd collection.

Seems to have been broken in KF5 port. QUrl readily ignores urls that don't
look good, so build it little bit more directly.

BUG: 455371